Fix: Number alignment

--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -2523,8 +2523,8 @@ span.endpointNameWrapper {
 
     .user-notification-badge {
       position: absolute;
-      top: -5px;
-      right: 7px;
+      top: -7px;
+      right: -1px;
       height: 14px;
       width: 14px;
       border-radius: 30px;
